Setting : 도커파일 재작성

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,18 @@ version: "3"
 services:
   db:
     image: mariadb:10
-    container_name: Deer_mysql
     ports:
       - 3306:3306
     volumes:
-      - ./deerDB/conf.d:/etc/mysql/conf.d
-      - ./deerDB/data:/var/lib/mysql
-      - ./deerDB/initdb.d:/docker-entrypoint-initdb.d
+      - ./db/conf.d:/etc/mysql/conf.d
+      - ./db/data:/var/lib/mysql
+      - ./db/initdb.d:/docker-entrypoint-initdb.d
     env_file: .env
     environment:
       TZ: Asia/Seoul
     networks:
-      - Deer
+      - backend
     restart: always
 
 networks:
-  Deer:
+  backend:
