Feat: Seeding과 Center값 계산을 위한 NPM Package 추가

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed:area": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed -n seedConfig.ts --seed CreateArea"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -28,18 +29,23 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/faker": "^5.5.9",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
+    "@types/polylabel": "^1.0.5",
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "dotenv": "^10.0.0",
+    "faker": "^5.5.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "passport-jwt": "^4.0.0",
+    "polylabel": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
