--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
+    "@types/polylabel": "^1.0.5",
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "dotenv": "^10.0.0",
@@ -37,6 +38,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "passport-jwt": "^4.0.0",
+    "polylabel": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
